css/ctcFrontend_style.css
/* ... */
@keyframes emptyCart {
    0%  {
      
       margin-right:20%;
    font-size:18px;
    
    }
    
    
    50% {

         margin-right:0%;
            
     
      -webkit-transform: rotate(120deg);
    -moz-transform: rotate(120deg);
    -o-transform: rotate(120deg);
    -ms-transform: rotate(120deg);
    transform: rotate(120deg);
    
    }
    
     100%{
             margin-right:20%;
             -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
              
     }
}



section.widget_ctcommerce_cart_widget{

		max-width:100% !important;
	
	
}

.ctcProductCartWidget{
  
   text-decoration:none !important;
   
    -webkit-animation: animateComponent 0.6s linear;
    animation: animateComponent 0.6s linear;
   
  
}



#ctcCartWidgetTable{
   width:95%!important;
  border-collapse:collapse !important;
   border:none !important;
  margin-bottom: 10px !important;

  
}




#ctcCartWidgetTable tr{
  
   -webkit-animation: animateSlideIn 1s linear; /* Safari 4.0 - 8.0 */
    animation: animateSlideIn 1s linear;
    
}

.ctcWidgetCartImageTd{
	
	width:20%;
	min-width:20%;
	  text-align:left;
   
}
#ctcCartWidgetTable tr td{
	
	padding-left:2px !important;
	text-align:right;
    border: 0;

	
}

.ctcCartWidgetItem tr td{
    
    padding-left:2px !important;
    text-align:right;
    border: 0;

    
}


#ctcCartWidgetTable tr td:nth-child(2){
    width:35%;
}
#ctcCartWidgetTable tr td:last-child{
    float:right;
    text-align:left;
    margin-top:10px;
    text-decoration:none !important;
}
#ctcCartWidgetTable tr td:last-child a{
	
	 text-decoration:none !important;
}

#ctcCartWidgetTable tr td:last-child a:hover::before{
    color:rgba(236, 112, 99 ,0.7); 
      text-align:center !important;
    -webkit-transform: scale(1.5);
    -moz-transform: scale(1.5);
    -o-transform: scale(1.5);
    -ms-transform: scale(1.5);
    transform: scale(1.5);
   -webkit-transition: width 0.5s; /* Safari */
    transition: width 0.5;
   transition: 0.5s ease;
  -webkit-transition: 0.5s ease;
  -moz-transition: 0.5s ease;
}
 
.ctcCartWidgetItem img{
	
	
	border:1px solid #2c48b3;
    max-width:99% !important;
    width:35px !important;
    border-radius:100%;
    min-width:35px;
}

.ctcCartWidgetTable tr:hover td{
	
	
	
}

.ctcCartWidgetItem:hover{
	
	   text-align:center !important;
    -webkit-transform: scale(1.08);
    -moz-transform: scale(1.08);
    -o-transform: scale(1.08);
    -ms-transform: scale(1.08);
    transform: scale(1.08);
   -webkit-transition: width 0.5s; /* Safari */
    transition: width 0.5;
   transition: 0.5s ease;
  -webkit-transition: 0.5s ease;
  -moz-transition: 0.5s ease;

   box-shadow:  0px 0px 2px rgba(0,0,0,0.5);
   
 	
}


.ctcCartWidgetItem img:hover{
  
    border:1px solid rgba(0,0,0,1);
  
}



#ctcWidgetCartGrandTotal{
	display:none;
	
	border-top: 2px solid black;
	border-top-left-radius: 10%;
    border-top-right-radius:10%;
   
    
  
}

.ctcRemoveWidgetCartItem span{
	
	text-decoration:none !important;
}

#ctcWidgetGrandTotalAmount{
	
	
    float: right;
    margin-top: 0px;
	margin-right:3%;
}
#ctcWidgetCartGrandTotal span:first-child{
	
	margin-left:20%;
	float:left;
	
	
}

.ctcRemoveWidgetCartItem span{
	font-size:20px;
	text-decoration:none;
	 -webkit-transition: width 0.5s; /* Safari */
    transition: width 0.5;
   transition: 0.5s ease;
  -webkit-transition: 0.5s ease;
  -moz-transition: 0.5s ease;
  margin-top:10px;
}


.ctcWidgetCartCheckOutbutton{
	float:right;
	text-align:center;
	width:145px;
	height:35px;
  padding: 10px 14px !important;
	margin-top:10px !important;
  margin-bottom:10px;
  text-transform:none !important;
  line-height: 1.4!important;

	
	
}
.ctcWidgetCartCheckOutbutton span{
	
	border-radius: 50px;
	width:40px;
	height:30px;
	margin-right:5px;
	font-size:20px;
	margin-top:-3px;
	margin-left:1px;
	padding-right:10px !important;
	margin-right:2px;
	transition: 0.5s ease;
  -webkit-transition: 0.5s ease;
  -moz-transition: 0.5s ease;
 
	 

}
.ctcWidgetCartCheckOutbutton:hover span{
    margin-right:2px;
    padding-right:0px !important;
    border-radius: 50px !important;
     text-shadow: 8px 8px 12px  rgba(0,0,0,0.8);
    
}

.ctcProductCartWidget button:hover{
	background-color:rgba(255,255,255);
}


/*styling for product cart page*/


/*animation for page load*/
@-webkit-keyframes ajaxWait {



    from {-webkit-transform: rotate(0deg);
    transform: rotate(0deg);
    color:rgba(0,133,186,1);
    margin-left:0px;
    
   }
    
    
    to {-webkit-transform: rotate(360deg);
    transform: rotate(360deg);
    color:rgba(0,133,186,1);
      margin-left:0px;
     
      
    }
}

/* Standard syntax */
@keyframes ajaxWait{
    from {
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    -ms-transform: rotate(deg);
    transform: rotate(0deg);
    color:rgba(0,133,186,1);
     margin-left:0px;
    
     }
    
    to {
   
    -moz-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
    
     color:rgba(0,133,186,1);
      margin-left:0px;
      
      
     }
}


.ctcPageCartContentMain{
	
	  -webkit-animation: animateComponent 1s linear;
    animation: animateComponent 1s linear;
	
}
.ctcPageCartItemGrid{
   


}


.ctcPageCartItem{
	border-bottom: 1px solid rgba(0,0,0,1);
	font-size:12px;
	padding-left:0px;
	padding-right:0px;
}

.ctcPageCartItem:hover{
	color:  rgba(0,128,128,0.7);
	background-color:rgba(204, 204, 204,0.2);
}


.ctcPageCartItem span{   
  display:inline-block;
  vertical-align: middle;
  text-align:center;
  width:96px;
  padding-top:5px;
  max-width:14.5%;
  
 
}
.ctcPageCartItem  a span{
 
 text-decoration:none;
  -webkit-transition: width 0.5s; /* Safari */
    transition: width 0.5;
    transition: 0.5s ease;
  -webkit-transition: 0.5s ease;
  -moz-transition: 0.5s ease;
padding-bottom:20px;
}
/* ... */

